--- a/default/alert_actions.conf
+++ b/default/alert_actions.conf
@@ -1,7 +1,7 @@
 [run_saved_search]
 is_custom = 1
 label = Run Saved Search
-description = Trigger a specified saved search when an alert is triggered
+description = Trigger a specified saved search when an alert is triggered.
 icon_path = icon.png
 payload_format = json
 script = run_saved_search.py
