--- a/default/app.conf
+++ b/default/app.conf
@@ -7,5 +7,5 @@ label = Run Saved Search Add-On
 
 [launcher]
 version = 1.0.0
-author = YourName
+author = Albert Taylor
 description = This add-on allows users to trigger saved searches from alerts.
